[metadata]
name = unsplash sdk
description = Command line tool for the unsplash API
author = Rodwan Bakkar
author_email = rodwan.bakkar@gmail.com
url = https://github.com/Rodwan-Bakkar/unsplash-sdk
keywords = unsplash sdk api
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    requests==2.25.1
    requests-oauthlib==1.3.0
    rauth==0.7.3
    Authlib==0.15.3
    Flask==1.1.2
    selenium==3.141.0
    webdriver-manager==3.3.0

test_suite = tests

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    unspsdk = unsplash_sdk.sdk_cli:main
